--- a/httpd-on-openshift/Deployment.yaml
+++ b/httpd-on-openshift/Deployment.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: container
           image: >-
-            image-registry.openshift-image-registry.svc:5000/openshift/httpd:2.4-ubi9
+            image-registry.openshift-image-registry.svc:5000/openshift/httpd:2.4-el8
           ports:
             - containerPort: 8080
               protocol: TCP
